[gd_scene load_steps=8 format=3 uid="uid://ts0saqd7n1w"]

[ext_resource type="Script" uid="uid://b2tj2avo08scr" path="res://scripts/ScorePanel.gd" id="1_538d3"]
[ext_resource type="FontFile" uid="uid://cb1upqnk6arqn" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_ld6kf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_538d3"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_538d3"]
font = ExtResource("1_ld6kf")
font_size = 18
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.756863)

[sub_resource type="LabelSettings" id="LabelSettings_2y052"]
font = ExtResource("1_ld6kf")
font_size = 18
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.756863)

[sub_resource type="LabelSettings" id="LabelSettings_apvfn"]
font = ExtResource("1_ld6kf")
font_size = 18
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.756863)

[sub_resource type="LabelSettings" id="LabelSettings_gmqmv"]
font = ExtResource("1_ld6kf")
font_size = 18
font_color = Color(0.33976382, 0.71283597, 0.84479713, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.756863)

[node name="ScorePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_538d3")
metadata/_edit_use_anchors_ = true

[node name="Score1" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2390625
anchor_top = 0.5226667
anchor_right = 0.4260625
anchor_bottom = 0.6886667
offset_top = -10.160004
offset_right = 0.32000732
offset_bottom = -9.920013
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_538d3")
metadata/_edit_use_anchors_ = true

[node name="Score_lbl1" type="Label" parent="Score1"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007999929
anchor_top = 0.017000008
anchor_right = 1.008
anchor_bottom = 1.0170001
offset_left = 0.040008545
offset_top = -0.020000458
offset_right = 0.03999996
offset_bottom = -0.020004272
grow_horizontal = 2
grow_vertical = 2
text = "SCORE"
label_settings = SubResource("LabelSettings_538d3")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Score2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.40500003
anchor_top = 0.4
anchor_right = 0.592
anchor_bottom = 0.56700003
offset_left = -0.2000122
offset_right = 0.11999512
offset_bottom = -0.120010376
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_538d3")
metadata/_edit_use_anchors_ = true

[node name="Score_lbl2" type="Label" parent="Score2"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.058000002
anchor_right = 1.0580001
anchor_bottom = 1.0
offset_left = 0.03999996
offset_right = 0.039993286
grow_horizontal = 2
grow_vertical = 2
text = "SCORE"
label_settings = SubResource("LabelSettings_2y052")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Score3" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5796875
anchor_top = 0.5143334
anchor_right = 0.767125
anchor_bottom = 0.65833336
offset_top = -7.160034
offset_right = 0.039978027
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_538d3")
metadata/_edit_use_anchors_ = true

[node name="Score_lbl3" type="Label" parent="Score3"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.0769228
anchor_right = 1.033
anchor_bottom = 1.0769228
offset_left = -2.0
offset_right = 0.039993286
grow_horizontal = 2
grow_vertical = 2
text = "SCORE"
label_settings = SubResource("LabelSettings_apvfn")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Protect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -36.0
offset_right = 50.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_538d3")
metadata/_edit_use_anchors_ = true

[node name="Protect_lbl" type="Label" parent="Protect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "PROTECTION"
label_settings = SubResource("LabelSettings_gmqmv")
horizontal_alignment = 1
vertical_alignment = 1
